# lingua_rs

./: .gitignore  .gitlab-ci.yml  .rubocop.yml  CHANGELOG.md  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  lingua.gemspec
.github/workflows/: ci.yml
exe/: lingua
ext/lingua/: Cargo.toml  extconf.rb
ext/lingua/src/: confidence_result.rs  detector.rs  helpers.rs  language.rs  lib.rs  segment.rs
lib/: lingua.rb
lib/lingua/: language.rb  version.rb
test/: test_batch.rb  test_benchmark.rb  test_confidence.rb  test_detect.rb  test_detect_multiple.rb  test_detector.rb  test_helper.rb  test_language.rb  test_lingua.rb
